--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import "compass/css3";
 body{
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	padding:0;
 }
 header{
-	width: 100vw;
+	width: 100%;
 	height: 20vh;
 	min-height: 70px;
 	background-color: #860E32;
